--- a/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
+++ b/ConfiguracionUsuarios/EdicionPermisosWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
         mc:Ignorable="d"
-        Title="Editar Permisos Específicos" Height="512" Width="420" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="Editar Permisos Específicos" Height="512" Width="444" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -24,7 +24,7 @@
 
         <ComboBox Name="cbAplicaciones" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" HorizontalContentAlignment="Center" SelectionChanged="cbAplicaciones_SelectionChanged" Grid.Row="0" FontFamily="Consolas" FontWeight="Bold"/>
 
-        <DataGrid Name="dgPermisos" HeadersVisibility="None" Grid.Row="1" VerticalScrollBarVisibility="Visible" FontSize="12" >
+        <DataGrid Name="dgPermisos" HeadersVisibility="None" Grid.Row="1" VerticalScrollBarVisibility="Visible" FontSize="12" Margin="10" >
             <DataGrid.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="DarkGray"/>
             </DataGrid.Resources>
