--- a/ConfiguracionUsuarios/App.xaml
+++ b/ConfiguracionUsuarios/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ConfiguracionUsuarios"
-             StartupUri="MainWindow.xaml">
+             StartupUri="SupaWindow.xaml">
     <Application.Resources>
 
         <!--Control colors.-->
