--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -7,16 +7,70 @@
         mc:Ignorable="d"
         Title="SupaWindow" Height="450" Width="800">
     <Grid>
-        
-        <Grid.RowDefinitions>
-            <RowDefinition Height="36"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
 
-        <Button Grid.Row="0" Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Grid.Row="0" Content="Button" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="40"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Rectangle Grid.Column="0" >
+            <Rectangle.Fill>
+                <SolidColorBrush Color="#FF1885A1"/>
+            </Rectangle.Fill>
+        </Rectangle>
+        <StackPanel>
+        <Button Grid.Column="0" Name="btnUSUARIOS" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click" Margin="2" HorizontalAlignment="Left">
+            <Image Source="/IngresoPedidos;component/Resources/list.png" Width="28" Height="28" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        </Button>
 
-        <ContentControl Grid.Row="1" x:Name="contentControl" Margin="10" />
+            <Button Grid.Column="0" Name="btnPEDIDOS" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+            <Image Source="/IngresoPedidos;component/Resources/search.png" Width="28" Height="28" />
+        </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS1" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/door.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS2" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/key.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS3" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/xls.png" Width="28" Height="28" />
+            </Button>
+            
+            <Separator/>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS4" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/add.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS5" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/door.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS6" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/search.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS7" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/xls.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS8" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/list.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS9" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/key.png" Width="28" Height="28" />
+            </Button>
+
+            <Button Grid.Column="0" Name="btnPEDIDOS10" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click_1"  Margin="2" HorizontalAlignment="Left">
+                <Image Source="/IngresoPedidos;component/Resources/xls.png" Width="28" Height="28" />
+            </Button>
+            
+        </StackPanel>
+
+        <ContentControl Grid.Column="1" x:Name="contentControl" Margin="0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" />
 
     </Grid>
 </Window>
