--- a/ConfiguracionUsuarios/SupaWindow.xaml
+++ b/ConfiguracionUsuarios/SupaWindow.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ConfiguracionUsuarios"
         mc:Ignorable="d"
-        Title="SupaWindow" Height="450" Width="800">
+        Title="SupaWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Grid>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="42"/>
+            <ColumnDefinition Width="38"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Rectangle Grid.Column="0" >
+        <Rectangle Grid.Column="0" Stroke="#FFABADB3" >
             <Rectangle.Fill>
                 <SolidColorBrush Color="#FF1885A1"/>
             </Rectangle.Fill>
         </Rectangle>
-        <StackPanel>
-        <Button Grid.Column="0" Name="btnUSUARIOS" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click" Margin="2" HorizontalAlignment="Left">
+        <StackPanel ScrollViewer.VerticalScrollBarVisibility="Disabled">
+        <Button Grid.Column="0" Name="btnUSUARIOS" Style="{StaticResource roundButtonTemplate32gray}"  VerticalAlignment="Top" Click="Button_Click" Margin="2,5,0,0" HorizontalAlignment="Left">
             <Image Source="/IngresoPedidos;component/Resources/list.png" Width="28" Height="28" HorizontalAlignment="Left" VerticalAlignment="Top" />
         </Button>
 
